# Shmingo_HAL

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  cmake_install.cmake  compile_commands.json  gcc-arm-none-eabi.cmake
Core/Include/: SHAL.h  SHAL_TIM.h
Core/Include/GPIO/: SHAL_GPIO.h  SHAL_GPIO_REG.h
Core/Include/Reg/: SHAL_TIM_CALLBACK.h  SHAL_TIM_REG.h
Core/Include/Timer/Reg/: SHAL_TIM_CALLBACK.h  SHAL_TIM_REG.h
Core/Src/: main.cpp
Core/Src/Reg/: SHAL_TIM.cpp  SHAL_TIM_CALLBACK.cpp
Drivers/CMSIS/Include/: cmsis_armcc.h  cmsis_armclang.h  cmsis_gcc.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm4.h  core_cm7.h  core_sc000.h  core_sc300.h
SHAL/Include/: SHAL.h
SHAL/Include/Core/: SHAL_CORE.h
SHAL/Include/Peripheral/ADC/: SHAL_ADC.h  SHAL_ADC_REG.h  SHAL_ADC_TYPES.h
SHAL/Include/Peripheral/ADC/Reg/: SHAL_ADC_REG.h  SHAL_ADC_REG_F072xB.h  SHAL_ADC_REG_L432KC.h  SHAL_ADC_TYPES.h
SHAL/Include/Peripheral/EXT/: SHAL_EXTI_CALLBACK.h  SHAL_EXTI_REG.h  SHAL_EXTI_TYPES.h
SHAL/Include/Peripheral/EXT/Reg/: SHAL_EXTI_REG_F072xB.h  SHAL_EXTI_REG_L432KC.h
SHAL/Include/Peripheral/GPIO/: SHAL_GPIO.h  SHAL_GPIO_REG.h  SHAL_GPIO_TYPES.h
SHAL/Include/Peripheral/GPIO/Reg/: SHAL_GPIO_REG.h  SHAL_GPIO_REG_F072xB.h  SHAL_GPIO_REG_L432KC.h  SHAL_GPIO_TYPES.h
SHAL/Include/Peripheral/GPIO/UART/: SHAL_UART.h
SHAL/Include/Peripheral/I2C/: SHAL_I2C.h  SHAL_I2C_REG.h
SHAL/Include/Peripheral/I2C/Reg/: SHAL_I2C_REG.h  SHAL_I2C_REG_F072xB.h  SHAL_I2C_REG_L432KC.h  SHAL_I2C_TYPES.h
SHAL/Include/Peripheral/Timer/: SHAL_TIM.h  SHAL_TIM_CALLBACK.h  SHAL_TIM_REG.h  SHAL_TIM_TYPES.h
SHAL/Include/Peripheral/Timer/Reg/: SHAL_TIM_REG.h  SHAL_TIM_REG_F072xB.h  SHAL_TIM_REG_L432KC.h  SHAL_TIM_TYPES.h
SHAL/Include/Peripheral/UART/: SHAL_UART.h  SHAL_UART_REG.h  SHAL_UART_TYPES.h
SHAL/Include/Peripheral/UART/Reg/: SHAL_UART_REG.h  SHAL_UART_REG_F072xB.h  SHAL_UART_REG_L432KC.h  SHAL_UART_TYPES.h
SHAL/Src/: main.cpp
SHAL/Src/Core/: SHAL_CORE.cpp
SHAL/Src/Peripheral/: SHAL_EXTI_CALLBACK.cpp
SHAL/Src/Peripheral/ADC/: SHAL_ADC.cpp
SHAL/Src/Peripheral/GPIO/: SHAL_GPIO.cpp
SHAL/Src/Peripheral/I2C/: SHAL_I2C.cpp
SHAL/Src/Peripheral/Timer/: SHAL_TIM.cpp
SHAL/Src/Peripheral/Timer/Reg/: SHAL_TIM.cpp  (+1 more)
SHAL/Src/Peripheral/UART/: SHAL_UART.cpp
SHAL/Src/Reg/: SHAL_TIM.cpp
SHAL/Src/STM32F0XX/Core/: SHAL_CORE.cpp
SHAL/Src/STM32F0XX/EXT/: SHAL_EXTI_CALLBACK.cpp
SHAL/Src/STM32L4XX/Core/: SHAL_CORE.cpp
SHAL/Src/STM32L4XX/EXT/: SHAL_EXTI_CALLBACK.cpp
SHAL/Src/System/: system_stm32f0xx.c
(+16 files in other folders)
